Update test result file of example

--- a/tests/test_report.html
+++ b/tests/test_report.html
@@ -83,7 +83,9 @@
         }
         button = document.getElementById(case_result.toLowerCase() + 'Button');
         button.className = case_result.toLowerCase() + 'Button';
-        document.getElementById('allButton').className = 'allButton';
+        if(document.getElementsByClassName('disableButton').length == 1) {
+            document.getElementById('allButton').className = 'allButton';
+        }
     }
 
     function hideStatusCase(case_result) {
@@ -93,9 +95,7 @@
         }
         button = document.getElementById(case_result.toLowerCase() + 'Button');
         button.className = 'disableButton';
-        if(document.getElementsByClassName('disableButton').length == 4) {
-            document.getElementById('allButton').className = 'disableButton';
-        }
+        document.getElementById('allButton').className = 'disableButton';
     }
 
     function changeCaseDisplay(case_result) {
@@ -571,7 +571,7 @@
             font-weight: bold;
             font-size: 15px;
             color: white;
-            padding: 0px;
+            padding: 2px;
             height: 30px;
             vertical-align: middle;
             text-align: left;
@@ -584,7 +584,7 @@
             overflow-y: scroll;
         }
         .table-body td {
-            border: 1px solid #34495e;
+            border: 1px solid #eaeded;
             padding: 2px;
             word-break:keep-all;
             white-space:nowrap;
