Fix the rerun issue with module level

--- a/tests/test_report.html
+++ b/tests/test_report.html
@@ -174,7 +174,7 @@
                  if (sql_result[0].values[i][0] == 'FAIL') {
                     failed.innerHTML = sql_result[0].values[i][1];
                  }
-                 if (sql_result[0].values[i][0] == 'ERROR' || sql_result[0].values[i][0] == 'ERROR') {
+                 if (sql_result[0].values[i][0] == 'ERROR' || sql_result[0].values[i][0] === null) {
                     error_count += sql_result[0].values[i][1];
                  }
                  result_count += sql_result[0].values[i][1];
@@ -224,19 +224,17 @@
             if(error_count > 0) {
                 status_arr.push('ERROR ' + error_count);
             }
-            button = document.createElement('input');
-            button.type = 'button';
+            button = document.createElement('button');
             button.id = 'allButton';
             button.className = 'allButton';
-            button.value = 'Total ' + result_count;
+            button.textContent = 'Total ' + result_count;
             button.onclick = Function("changeCaseDisplay('All');");
             document.getElementById('Status').appendChild(button);
             for(var i=0; i<status_arr.length; i++) {
-                button = document.createElement('input');
+                button = document.createElement('button');
                 button.id = status_arr[i].split(' ')[0].toLowerCase() + 'Button';
                 button.className = status_arr[i].split(' ')[0].toLowerCase() + 'Button';
-                button.type = 'button';
-                button.value = status_arr[i];
+                button.textContent = status_arr[i].toLowerCase();
                 button.onclick = Function("changeCaseDisplay('" + status_arr[i].split(' ')[0] + "');");
                 document.getElementById('Status').appendChild(button);
             }
@@ -345,11 +343,11 @@
         tr.appendChild(duration);
         tr.appendChild(case_log_td);
 
-        if (row[result] == 'ERROR') {
+        if (row[result].toUpperCase() == 'ERROR') {
             tr.className = 'errorCase';
-        } else if (row[result] == 'FAIL') {
+        } else if (row[result].toUpperCase() == 'FAIL') {
             tr.className = 'failCase';
-        } else if (row[result] == 'SKIP') {
+        } else if (row[result].toUpperCase() == 'SKIP') {
             tr.className = 'skipCase';
         } else {
             tr.className = 'passCase';
@@ -449,7 +447,7 @@
         body        { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; }
         table       { table-layout:fixed; }
         pre         { margin-left: 20px; line-height: 200%; white-space: pre-wrap; word-wrap: break-word; }
-        input       { font-size: 100%; }
+        button      { font-size: 100%; text-transform: capitalize; }
 
         /* -- heading ---------------------------------------------------------------------- */
         h1                   { font-size: 150%; color: #34495e; }
@@ -587,10 +585,10 @@
                     <tr>
                         <th>Test Module/Test Class/Test Case</th>
                         <th>Count</th>
-                        <th>PASS</th>
-                        <th>FAIL</th>
-                        <th>ERROR</th>
-                        <th>SKIP</th>
+                        <th>Pass</th>
+                        <th>Fail</th>
+                        <th>Error</th>
+                        <th>Skip</th>
                         <th>Duration</th>
                         <th><a id="reportLog" href="javascript:showLog(null, null, null)">Log</a></th>
                     </tr>
