Generate html file of report by jinja2 instead of str

--- a/SQLiteTestRunner/report_template.html
+++ b/SQLiteTestRunner/report_template.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <script src="https://rawgit.com/kripken/sql.js/master/js/sql-memory-growth.js"></script>
 <script language="javascript" type="text/javascript">
-    result_db = "test_result.db";
+    result_db = "{{ reportdb }}";
     // result_table
     module = 0;
     case_class = 1;
